# Repository

./: .gitignore  Dockerfile  compose.prod.example.yaml  compose.yaml  pyproject.toml  requirements.txt
protos/: Minio.proto
script/: generate_grpc_code.sh
src/: config.py  main.py  minio_service.py
